--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@source4society/SCEPTER-GatewayService",
-  "version": "1.0.2",
+  "version": "1.1.0",
   "description": "Gateway for invoking functions over http",
   "main": "handler.js",
   "repository": "git@github.com:source4societyorg/SCEPTER-GatewayService",
@@ -12,19 +12,20 @@
     "sls": "sls"
   },
   "dependencies": {
+    "@source4society/scepter-utility-lib": "^0.0.4",
     "aws-sdk": "^2.149.0",
     "jsonwebtoken": "^8.1.0",
     "mime-types": "^2.1.17",
     "serverless": "^1.24.1"
   },
   "devDependencies": {
-    "jest-cli": "^21.2.1",
+    "docco": "^0.7.0",
     "eslint": "^4.10.0",
-    "docco": "^0.7.0", 
     "eslint-config-standard": "^10.2.1",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-node": "^5.2.1",
     "eslint-plugin-promise": "^3.6.0",
-    "eslint-plugin-standard": "^3.0.1"
+    "eslint-plugin-standard": "^3.0.1",
+    "jest-cli": "^21.2.1"
   }
 }
