Adding support for azure

--- a/.gitignore
+++ b/.gitignore
@@ -6,5 +6,7 @@ yarn-error.log
 request.json
 credentials.json
 services.json
+parameters.json
 # Serverless directories
 .serverless
+serverless.yml
