--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
     "sls": "sls"
   },
   "dependencies": {
-    "@source4society/scepter-utility-lib": "^0.0.4",
+    "@source4society/scepter-utility-lib": "^0.0.5",
     "aws-sdk": "^2.149.0",
     "jsonwebtoken": "^8.1.0",
     "mime-types": "^2.1.17",
-    "serverless": "^1.24.1"
+    "serverless": "^1.25.0"
   },
   "devDependencies": {
     "docco": "^0.7.0",
@@ -26,6 +26,7 @@
     "eslint-plugin-node": "^5.2.1",
     "eslint-plugin-promise": "^3.6.0",
     "eslint-plugin-standard": "^3.0.1",
-    "jest-cli": "^21.2.1"
+    "jest-cli": "^21.2.1",
+    "serverless-azure-functions": "ssh://git@github.com:serverless/serverless-azure-functions"
   }
 }
