--- a/config/serverless_template_azure.yml
+++ b/config/serverless_template_azure.yml
@@ -1,4 +1,4 @@
-service: ${file(./parameters.json):appName}-GatewayService-${opt:stage, 'dev'}
+service: ${file(./config/service_name.json):service)-${opt:stage, 'dev'}
 provider:
   name: azure
   location: ${opt:location, 'West US'}
