--- a/serverless.yml
+++ b/serverless.yml
@@ -1,30 +1,57 @@
-service: ${file(./parameters.json):appName}-GatewayService-${opt:stage, 'dev'}
+# Welcome to Serverless!
+#
+# This file is the main config file for your service.
+# It's very minimal at this point and uses default values.
+# You can always add more config options for more control.
+# We've included some commented out config examples here.
+# Just uncomment any of them to get that config option.
+#
+# For full config options, check the docs:
+#    docs.serverless.com
+#
+# Happy Coding!
+
+service: webdugout-GatewayService-dev
+
+# You can pin your service to only deploy with a specific Serverless version
+# Check out our docs for more details
+# frameworkVersion: "=X.X.X"
+
 provider:
   name: azure
-  location: ${opt:location, 'West US'}
+  location: West US
 
-plugins: 
+plugins:
   - serverless-azure-functions
 
+# you can add packaging information here
+#package:
+#  include:
+#    - include-me.js
+#    - include-me-dir/**
+#  exclude:
+#    - exclude-me.js
+#    - exclude-me-dir/**
+
 functions:
-  proxy:
-    handler: handler_${self:provider.name}.proxy
+  proxyRequest:
+    handler: handler.proxyRequest
     events:
-      - http: true,
+      - http: true
         x-azure-settings:
           authLevel : anonymous
-          methods: post
-          route: /         
-      - http: true,
+      - http: true
         x-azure-settings:
           direction: out
-          name: res 
-package:
-  exclude: 
-    - 'test/**'
-    - 'coverage/**'
-    - 'LICENSE'
-    - 'README.md'
-    - '.travis.yml'
-    - 'docs/**'
-    - 'handler_aws.js'
+          name: res
+
+# The following are a few examples of other events you can configure:
+#
+# events:
+#   - queue: YourQueueName
+#     x-azure-settings:
+#       connection : StorageAppSettingName
+#   - blob:
+#     x-azure-settings:
+#       name: bindingName
+#       direction: in
