--- a/config/serverless_template_aws.yml
+++ b/config/serverless_template_aws.yml
@@ -1,4 +1,4 @@
-service: ${file(./config/service_name.json}:service)
+service: ${file(./config/service_name.json):service}
 provider:
   name: aws
   runtime: nodejs6.10
@@ -14,8 +14,8 @@ provider:
         - lambda:InvokeAsync
       Resource: "*"
 functions:
-  proxy:
-    handler: handler.proxy
+  proxyRequest:
+    handler: handler.proxyRequest
     events:
       - http:
             path: /         
