--- a/serverless.yml
+++ b/serverless.yml
@@ -1,57 +1,41 @@
-# Welcome to Serverless!
-#
-# This file is the main config file for your service.
-# It's very minimal at this point and uses default values.
-# You can always add more config options for more control.
-# We've included some commented out config examples here.
-# Just uncomment any of them to get that config option.
-#
-# For full config options, check the docs:
-#    docs.serverless.com
-#
-# Happy Coding!
-
-service: webdugout-GatewayService-dev
-
-# You can pin your service to only deploy with a specific Serverless version
-# Check out our docs for more details
-# frameworkVersion: "=X.X.X"
-
+service: ${file(./config/service_name.json):service}
 provider:
-  name: azure
-  location: West US
-
-plugins:
-  - serverless-azure-functions
-
-# you can add packaging information here
-#package:
-#  include:
-#    - include-me.js
-#    - include-me-dir/**
-#  exclude:
-#    - exclude-me.js
-#    - exclude-me-dir/**
-
+  name: aws
+  runtime: nodejs6.10
+  stage: ${opt:stage, 'dev'}
+  environment:
+    STAGE: ${self:provider.stage}
+    SLS_DEBUG: "*"
+    PROVIDER: 'aws'
+  iamRoleStatements:
+    - Effect: Allow
+      Action:
+        - lambda:InvokeFunction
+        - lambda:InvokeAsync
+      Resource: "*"
 functions:
   proxyRequest:
     handler: handler.proxyRequest
     events:
-      - http: true
-        x-azure-settings:
-          authLevel : anonymous
-      - http: true
-        x-azure-settings:
-          direction: out
-          name: res
-
-# The following are a few examples of other events you can configure:
-#
-# events:
-#   - queue: YourQueueName
-#     x-azure-settings:
-#       connection : StorageAppSettingName
-#   - blob:
-#     x-azure-settings:
-#       name: bindingName
-#       direction: in
+      - http:
+            path: /         
+            method: post                                      
+            cors:
+              origin: '*'
+              headers:
+                - Content-Type
+                - X-Amz-Date
+                - Authorization
+                - X-Api-Key
+                - X-Amz-Security-Token
+                - X-Amz-User-Agent 
+package:
+  exclude: 
+    - 'test/**'
+    - 'coverage/**'
+    - 'LICENSE'
+    - 'README.md'
+    - '.travis.yml'
+    - 'docs/**'
+    - 'handler_azure.js'
+    - 'proxyRequest-function.json'
