--- a/config/serverless_template_aws.yml
+++ b/config/serverless_template_aws.yml
@@ -1,4 +1,4 @@
-service: ${file(./config/service_name.json):service}
+service: ${file(./config/service_name.yml):service}
 provider:
   name: aws
   runtime: nodejs6.10
