--- a/config/serverless_template_azure.yml
+++ b/config/serverless_template_azure.yml
@@ -1,8 +1,10 @@
-service: ${file(./config/service_name.json):service}-${opt:stage, 'dev'}
+service: ${file(./config/service_name.yml):service}-${opt:stage, 'dev'}
 provider:
   name: azure
   location: ${opt:location, 'West US'}
   environment:
+    STAGE: ${self:provider.stage}
+    SLS_DEBUG: "*"
     PROVIDER: 'azure'
 plugins: 
   - serverless-azure-functions
