--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ request.json
 /credentials.json
 /services.json
 /parameters.json
+/test/testdata
 # Serverless directories
 .serverless
 serverless.yml
