--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@source4society/SCEPTER-GatewayService",
-  "version": "2.1.0",
+  "version": "2.2.0",
   "description": "Gateway for invoking api functions within a cloud service provider",
   "main": "handler.js",
   "repository": "git@github.com:source4societyorg/SCEPTER-GatewayService",
@@ -13,9 +13,11 @@
   },
   "dependencies": {
     "@source4society/scepter-handlerutilities-lib": "^1.1.1",
-    "@source4society/scepter-utility-lib": "^0.0.24",
+    "@source4society/scepter-service-utility-lib": "^1.0.1",
+    "@source4society/scepter-utility-lib": "^1.1.0",
     "aws-sdk": "^2.149.0",
     "immutable": "^3.8.2",
+    "jest-junit": "^3.6.0",
     "jsonwebtoken": "^8.1.0",
     "request": "^2.83.0"
   },
@@ -31,5 +33,23 @@
     "jest-cli": "^21.2.1",
     "serverless": "^1.25.0",
     "serverless-azure-functions": "https://github.com/serverless/serverless-azure-functions"
+  },
+  "jest": {
+    "coverageReporters": [
+      "text",
+      "html",
+      "cobertura"
+    ],
+    "testResultsProcessor": "jest-junit",
+    "coverageDirectory": "./coverage",
+    "collectCoverage": true,
+    "coverageThreshold": {
+      "global": {
+        "statements": 60,
+        "branches": 60,
+        "functions": 60,
+        "lines": 60
+      }
+    }
   }
 }
